# keybear

./: .gitignore  404.html  Cargo.toml  README.md  cryptography.html  index.html  introduction.html  keybear.service  print.html  searchindex.js  searchindex.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  book.yml  coverage.yml  release.yml  standards.yml  test.yml
debian/: service  tor-service.conf
docs/: book.toml
docs/src/: SUMMARY.md  cryptography.md
docs/src/installation/: deb.md  installation.md  manually.md
installation/: deb.html  installation.html  manually.html
src/: app.rs  body.rs  lib.rs  main.rs  route.rs
src/command/: mod.rs  status.rs
src/config/: mod.rs
src/crypto/: json.rs  middleware.rs  mod.rs
src/device/: mod.rs  nonce.rs  register.rs
src/net/: crypto.rs  mod.rs
src/password/: mod.rs
src/store/: mod.rs
src/test/: mod.rs
src/tor/: service.rs
tests/: config.toml  nonce_test.rs  password_test.rs  register_test.rs
