[package]
name = "keybear"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/keybear/keybear"
description = "Self-hosted password manager"
include = ["src/**/*", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
ed25519-dalek = "1.0.1"
log = "0.4.11"
semver = "0.11.0"
syslog = "5.0.0"

# Crash on panics instead of trying to mitigate the problems
[profile.release]
panic = "abort"

[package.metadata.deb]
license-file = ["LICENSE", "0"]
depends = "$auto, tor"
maintainer-scripts = "debian/"
assets = [
	["debian/tor-service.conf", "/etc/tor/torrc.d/keybear.conf", "755"]
]
systemd-units = { enable = true }
