[package]
name = "keybear"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/keybear/keybear"
description = "Self-hosted password manager"
include = ["src/**/*", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-http = "2.2.0"
actix-service = "1.0.6"
actix-storage = { version = "0.1.1", features = ["serde-json"] }
actix-storage-sled = "0.1.1"
actix-web = "3.3.2"
anyhow = "1.0.35"
base64 = "0.13.0"
chacha20poly1305 = "0.7.1"
clap = "3.0.0-beta.2"
futures = "0.3.8"
log = "0.4.11"
paperclip = { version = "0.5.0", features = ["actix"] }
rand = "0.7.3"
serde = { version = "1.0.118", features = ["derive"] }
syslog = "5.0.0"
toml = "0.5.7"
uuid = { version = "0.8.1", features = ["v4"] }
x25519-dalek = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
actix-http = "2.2.0"
actix-rt = "1.1.1"
actix-storage-hashmap = "0.1.1"
tempfile = "3.1.0"

[features]
# We have to define the test as a feature otherwise the module won't be exported
test = []

[[test]]
name = "register"
path = "tests/register.rs"
required-features = ["test"]

# Crash on panics instead of trying to mitigate the problems
[profile.release]
panic = "abort"

[package.metadata.deb]
license-file = ["LICENSE", "0"]
depends = "$auto, tor"
maintainer-scripts = "debian/"
assets = [
	["target/release/keybear", "/usr/bin/", "755"],
	["debian/tor-service.conf", "/etc/tor/torrc.d/keybear.conf", "644"]
]
systemd-units = { enable = true }
